--- a/nback5d/Base.lproj/Main.storyboard
+++ b/nback5d/Base.lproj/Main.storyboard
@@ -1,10 +1,179 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Hmo-2D-OA9">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="BebasNeue Book.ttf">
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
+        <!--Configuration View Controller-->
+        <scene sceneID="EMp-sa-x8u">
+            <objects>
+                <viewController storyboardIdentifier="ConfigurationViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Hmo-2D-OA9" customClass="ConfigurationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nvq-eR-vNo"/>
+                        <viewControllerLayoutGuide type="bottom" id="isv-Js-aNP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7yI-MY-gvt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="2" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="56r-Rl-AvQ">
+                                <rect key="frame" x="150" y="259" width="303" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="299" id="EzM-rV-4EB"/>
+                                </constraints>
+                                <color key="minimumTrackTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectionTimeSliderValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="zlQ-xb-dSI"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selection time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGr-dD-JHh">
+                                <rect key="frame" x="190" y="216" width="222" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="222" id="A9J-vT-2eI"/>
+                                    <constraint firstAttribute="height" constant="35" id="t6E-Mv-aVB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t3V-BZ-mda">
+                                <rect key="frame" x="277" y="327" width="51" height="31"/>
+                                <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="spaceSwitchValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="Gbt-op-KeM"/>
+                                </connections>
+                            </switch>
+                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iuM-ac-Kli">
+                                <rect key="frame" x="277" y="370" width="51" height="31"/>
+                                <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="colorSwitchValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="LSs-aU-ieb"/>
+                                </connections>
+                            </switch>
+                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UgA-zD-gq3">
+                                <rect key="frame" x="277" y="413" width="51" height="31"/>
+                                <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="soundSwitchValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="e5p-LQ-mtj"/>
+                                </connections>
+                            </switch>
+                            <switch opaque="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4lt-sM-TI3">
+                                <rect key="frame" x="277" y="456" width="51" height="31"/>
+                                <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb2-fb-5tE">
+                                <rect key="frame" x="263" y="528" width="75" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="TkF-Bp-xc9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Start"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N - BACK" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgx-aG-ltN">
+                                <rect key="frame" x="264" y="97" width="72" height="28"/>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COLOR" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xdh-6c-IoM">
+                                <rect key="frame" x="201" y="372" width="52" height="28"/>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPACE" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zsu-Ir-sqe">
+                                <rect key="frame" x="197" y="329" width="56" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="NVV-7M-Rrj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOUND" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxJ-qy-9e3">
+                                <rect key="frame" x="201" y="415" width="54" height="28"/>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHAPE" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ek0-EG-5dG">
+                                <rect key="frame" x="199" y="458" width="54" height="28"/>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="UHR-FO-jIh">
+                                <rect key="frame" x="149" y="140" width="303" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="299" id="4Lr-xl-Ej9"/>
+                                </constraints>
+                                <color key="minimumTrackTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="nbackSliderValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="FCk-eo-l0t"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hgx-aG-ltN" firstAttribute="top" secondItem="Nvq-eR-vNo" secondAttribute="bottom" constant="77" id="4X3-Bm-bcN"/>
+                            <constraint firstItem="56r-Rl-AvQ" firstAttribute="centerX" secondItem="AGr-dD-JHh" secondAttribute="centerX" id="9PX-BU-P2f"/>
+                            <constraint firstItem="UgA-zD-gq3" firstAttribute="leading" secondItem="gxJ-qy-9e3" secondAttribute="trailing" constant="22" id="A04-mm-X0Y"/>
+                            <constraint firstItem="t3V-BZ-mda" firstAttribute="centerX" secondItem="56r-Rl-AvQ" secondAttribute="centerX" id="BLx-qB-Icd"/>
+                            <constraint firstItem="iuM-ac-Kli" firstAttribute="top" secondItem="t3V-BZ-mda" secondAttribute="bottom" constant="12" id="DoB-t8-5rz"/>
+                            <constraint firstItem="4lt-sM-TI3" firstAttribute="centerY" secondItem="Ek0-EG-5dG" secondAttribute="centerY" id="EVR-Yi-s6S"/>
+                            <constraint firstItem="4lt-sM-TI3" firstAttribute="centerX" secondItem="UgA-zD-gq3" secondAttribute="centerX" id="GPM-E8-Bwb"/>
+                            <constraint firstItem="UgA-zD-gq3" firstAttribute="top" secondItem="iuM-ac-Kli" secondAttribute="bottom" constant="12" id="H5z-eA-WTn"/>
+                            <constraint firstItem="zsu-Ir-sqe" firstAttribute="centerY" secondItem="t3V-BZ-mda" secondAttribute="centerY" id="L1y-1z-dg4"/>
+                            <constraint firstItem="56r-Rl-AvQ" firstAttribute="top" secondItem="AGr-dD-JHh" secondAttribute="bottom" constant="8" id="Lpj-il-yJS"/>
+                            <constraint firstItem="gxJ-qy-9e3" firstAttribute="centerY" secondItem="UgA-zD-gq3" secondAttribute="centerY" id="Mqt-Po-GMZ"/>
+                            <constraint firstItem="t3V-BZ-mda" firstAttribute="leading" secondItem="zsu-Ir-sqe" secondAttribute="trailing" constant="24" id="NTq-0i-jk6"/>
+                            <constraint firstItem="hgx-aG-ltN" firstAttribute="centerX" secondItem="7yI-MY-gvt" secondAttribute="centerX" id="Qux-7K-g3c"/>
+                            <constraint firstItem="AGr-dD-JHh" firstAttribute="top" secondItem="UHR-FO-jIh" secondAttribute="bottom" constant="46" id="RLG-ZF-b53"/>
+                            <constraint firstItem="Eb2-fb-5tE" firstAttribute="centerX" secondItem="4lt-sM-TI3" secondAttribute="centerX" constant="-1" id="SH7-Bc-xY7"/>
+                            <constraint firstItem="4lt-sM-TI3" firstAttribute="top" secondItem="UgA-zD-gq3" secondAttribute="bottom" constant="12" id="UJf-9X-Ipq"/>
+                            <constraint firstItem="iuM-ac-Kli" firstAttribute="centerX" secondItem="t3V-BZ-mda" secondAttribute="centerX" id="Vng-MQ-EE8"/>
+                            <constraint firstItem="UHR-FO-jIh" firstAttribute="top" secondItem="hgx-aG-ltN" secondAttribute="bottom" constant="15" id="ZXo-7C-u1W"/>
+                            <constraint firstItem="t3V-BZ-mda" firstAttribute="top" secondItem="56r-Rl-AvQ" secondAttribute="bottom" constant="38" id="a7g-00-oiZ"/>
+                            <constraint firstItem="Eb2-fb-5tE" firstAttribute="top" secondItem="4lt-sM-TI3" secondAttribute="bottom" constant="41" id="a9A-uJ-Jjj"/>
+                            <constraint firstItem="iuM-ac-Kli" firstAttribute="leading" secondItem="Xdh-6c-IoM" secondAttribute="trailing" constant="24" id="jJs-UP-TvG"/>
+                            <constraint firstItem="UgA-zD-gq3" firstAttribute="centerX" secondItem="iuM-ac-Kli" secondAttribute="centerX" id="lU8-Rf-1t5"/>
+                            <constraint firstItem="AGr-dD-JHh" firstAttribute="centerX" secondItem="UHR-FO-jIh" secondAttribute="centerX" id="poa-3f-ze2"/>
+                            <constraint firstItem="4lt-sM-TI3" firstAttribute="leading" secondItem="Ek0-EG-5dG" secondAttribute="trailing" constant="24" id="twQ-GN-h6X"/>
+                            <constraint firstItem="UHR-FO-jIh" firstAttribute="centerX" secondItem="hgx-aG-ltN" secondAttribute="centerX" id="udA-Vn-eKb"/>
+                            <constraint firstItem="Xdh-6c-IoM" firstAttribute="centerY" secondItem="iuM-ac-Kli" secondAttribute="centerY" id="vbB-58-LVt"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="colorSwitch" destination="iuM-ac-Kli" id="d6y-D8-MOf"/>
+                        <outlet property="nbackLabel" destination="hgx-aG-ltN" id="29H-ib-bg8"/>
+                        <outlet property="nbackSlider" destination="UHR-FO-jIh" id="0UD-YP-aEh"/>
+                        <outlet property="selectionTimeLabel" destination="AGr-dD-JHh" id="OkY-r7-gdN"/>
+                        <outlet property="soundSwitch" destination="UgA-zD-gq3" id="ePH-JG-Xuh"/>
+                        <outlet property="spaceSwitch" destination="t3V-BZ-mda" id="MBc-GV-zR8"/>
+                        <outlet property="startButton" destination="Eb2-fb-5tE" id="VAV-QT-msP"/>
+                        <outlet property="timeSlider" destination="56r-Rl-AvQ" id="LsQ-Y0-VrY"/>
+                        <outletCollection property="switchLabels" destination="zsu-Ir-sqe" id="aZb-WB-eMJ"/>
+                        <outletCollection property="switchLabels" destination="Xdh-6c-IoM" id="73x-Ew-FE1"/>
+                        <outletCollection property="switchLabels" destination="gxJ-qy-9e3" id="jOU-ay-IL1"/>
+                        <outletCollection property="switches" destination="t3V-BZ-mda" id="UhH-Kc-cEA"/>
+                        <outletCollection property="switches" destination="iuM-ac-Kli" id="V4V-41-c1f"/>
+                        <outletCollection property="switches" destination="UgA-zD-gq3" id="oB4-Dd-Wga"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K6W-Wh-VZm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="288"/>
+        </scene>
         <!--Active Game View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -21,6 +190,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="379" y="288"/>
         </scene>
     </scenes>
 </document>
