--- a/nback5d/Base.lproj/Main.storyboard
+++ b/nback5d/Base.lproj/Main.storyboard
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Hmo-2D-OA9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Hmo-2D-OA9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="BebasNeue Book.ttf">
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
+            <string>BebasNeueBook</string>
             <string>BebasNeueBook</string>
             <string>BebasNeueBook</string>
             <string>BebasNeueBook</string>
@@ -26,7 +30,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="2" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="56r-Rl-AvQ">
+                            <slider opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="4" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="56r-Rl-AvQ">
                                 <rect key="frame" x="150" y="259" width="303" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="299" id="EzM-rV-4EB"/>
@@ -46,7 +50,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t3V-BZ-mda">
+                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="t3V-BZ-mda">
                                 <rect key="frame" x="277" y="327" width="51" height="31"/>
                                 <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
                                 <connections>
@@ -71,8 +75,8 @@
                                 <rect key="frame" x="277" y="456" width="51" height="31"/>
                                 <color key="onTintColor" red="0.0" green="1" blue="0.0" alpha="0.28000000000000003" colorSpace="calibratedRGB"/>
                             </switch>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb2-fb-5tE">
-                                <rect key="frame" x="263" y="528" width="75" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb2-fb-5tE">
+                                <rect key="frame" x="263" y="550" width="75" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="TkF-Bp-xc9"/>
                                 </constraints>
@@ -100,6 +104,33 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.05000000074505806" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="345 PTS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gcC-QT-Tzv">
+                                <rect key="frame" x="350" y="329" width="89" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89" id="44X-55-mtm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.05000000074505806" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="345 PTS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXE-Ku-2wO">
+                                <rect key="frame" x="350" y="372" width="89" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89" id="9XD-oY-t1S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.05000000074505806" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="345 PTS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi9-8L-9CH">
+                                <rect key="frame" x="350" y="415" width="89" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89" id="dZU-VY-QR3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOUND" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxJ-qy-9e3">
                                 <rect key="frame" x="201" y="415" width="54" height="28"/>
                                 <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
@@ -122,9 +153,26 @@
                                     <action selector="nbackSliderValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="FCk-eo-l0t"/>
                                 </connections>
                             </slider>
+                            <switch opaque="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GPi-vG-BG5">
+                                <rect key="frame" x="393" y="495" width="51" height="31"/>
+                                <color key="onTintColor" red="1" green="0.0" blue="0.1199872273" alpha="0.62201752533783783" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="penaltySwitchValueChanged:" destination="Hmo-2D-OA9" eventType="valueChanged" id="P6h-fc-XFJ"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.05000000074505806" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WRONG ANSWER PENALTY" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ltz-iH-bOE">
+                                <rect key="frame" x="151" y="497" width="213" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="213" id="3bA-aa-VAA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BebasNeueBook" family="Bebas Neue" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xi9-8L-9CH" firstAttribute="top" secondItem="ZXE-Ku-2wO" secondAttribute="bottom" constant="15" id="2CL-sy-YlR"/>
                             <constraint firstItem="hgx-aG-ltN" firstAttribute="top" secondItem="Nvq-eR-vNo" secondAttribute="bottom" constant="77" id="4X3-Bm-bcN"/>
                             <constraint firstItem="56r-Rl-AvQ" firstAttribute="centerX" secondItem="AGr-dD-JHh" secondAttribute="centerX" id="9PX-BU-P2f"/>
                             <constraint firstItem="UgA-zD-gq3" firstAttribute="leading" secondItem="gxJ-qy-9e3" secondAttribute="trailing" constant="22" id="A04-mm-X0Y"/>
@@ -133,10 +181,14 @@
                             <constraint firstItem="4lt-sM-TI3" firstAttribute="centerY" secondItem="Ek0-EG-5dG" secondAttribute="centerY" id="EVR-Yi-s6S"/>
                             <constraint firstItem="4lt-sM-TI3" firstAttribute="centerX" secondItem="UgA-zD-gq3" secondAttribute="centerX" id="GPM-E8-Bwb"/>
                             <constraint firstItem="UgA-zD-gq3" firstAttribute="top" secondItem="iuM-ac-Kli" secondAttribute="bottom" constant="12" id="H5z-eA-WTn"/>
+                            <constraint firstItem="xi9-8L-9CH" firstAttribute="centerY" secondItem="UgA-zD-gq3" secondAttribute="centerY" id="JTO-KD-8Xb"/>
+                            <constraint firstItem="gcC-QT-Tzv" firstAttribute="top" secondItem="56r-Rl-AvQ" secondAttribute="bottom" constant="40" id="JVu-AJ-FAg"/>
                             <constraint firstItem="zsu-Ir-sqe" firstAttribute="centerY" secondItem="t3V-BZ-mda" secondAttribute="centerY" id="L1y-1z-dg4"/>
                             <constraint firstItem="56r-Rl-AvQ" firstAttribute="top" secondItem="AGr-dD-JHh" secondAttribute="bottom" constant="8" id="Lpj-il-yJS"/>
+                            <constraint firstItem="gcC-QT-Tzv" firstAttribute="centerY" secondItem="t3V-BZ-mda" secondAttribute="centerY" id="MCX-K4-cSe"/>
                             <constraint firstItem="gxJ-qy-9e3" firstAttribute="centerY" secondItem="UgA-zD-gq3" secondAttribute="centerY" id="Mqt-Po-GMZ"/>
                             <constraint firstItem="t3V-BZ-mda" firstAttribute="leading" secondItem="zsu-Ir-sqe" secondAttribute="trailing" constant="24" id="NTq-0i-jk6"/>
+                            <constraint firstItem="xi9-8L-9CH" firstAttribute="leading" secondItem="UgA-zD-gq3" secondAttribute="trailing" constant="24" id="Nku-5y-TNt"/>
                             <constraint firstItem="hgx-aG-ltN" firstAttribute="centerX" secondItem="7yI-MY-gvt" secondAttribute="centerX" id="Qux-7K-g3c"/>
                             <constraint firstItem="AGr-dD-JHh" firstAttribute="top" secondItem="UHR-FO-jIh" secondAttribute="bottom" constant="46" id="RLG-ZF-b53"/>
                             <constraint firstItem="Eb2-fb-5tE" firstAttribute="centerX" secondItem="4lt-sM-TI3" secondAttribute="centerX" constant="-1" id="SH7-Bc-xY7"/>
@@ -144,24 +196,36 @@
                             <constraint firstItem="iuM-ac-Kli" firstAttribute="centerX" secondItem="t3V-BZ-mda" secondAttribute="centerX" id="Vng-MQ-EE8"/>
                             <constraint firstItem="UHR-FO-jIh" firstAttribute="top" secondItem="hgx-aG-ltN" secondAttribute="bottom" constant="15" id="ZXo-7C-u1W"/>
                             <constraint firstItem="t3V-BZ-mda" firstAttribute="top" secondItem="56r-Rl-AvQ" secondAttribute="bottom" constant="38" id="a7g-00-oiZ"/>
-                            <constraint firstItem="Eb2-fb-5tE" firstAttribute="top" secondItem="4lt-sM-TI3" secondAttribute="bottom" constant="41" id="a9A-uJ-Jjj"/>
+                            <constraint firstItem="GPi-vG-BG5" firstAttribute="leading" secondItem="Ltz-iH-bOE" secondAttribute="trailing" constant="29" id="dCm-86-ECe"/>
+                            <constraint firstItem="Ltz-iH-bOE" firstAttribute="top" secondItem="4lt-sM-TI3" secondAttribute="bottom" constant="10" id="fOy-TE-oVq"/>
+                            <constraint firstItem="ZXE-Ku-2wO" firstAttribute="leading" secondItem="iuM-ac-Kli" secondAttribute="trailing" constant="24" id="gLv-c6-q3E"/>
+                            <constraint firstItem="Ltz-iH-bOE" firstAttribute="leading" secondItem="UHR-FO-jIh" secondAttribute="leading" id="gyR-om-8YM"/>
+                            <constraint firstItem="GPi-vG-BG5" firstAttribute="centerY" secondItem="Ltz-iH-bOE" secondAttribute="centerY" id="iig-md-G8n"/>
                             <constraint firstItem="iuM-ac-Kli" firstAttribute="leading" secondItem="Xdh-6c-IoM" secondAttribute="trailing" constant="24" id="jJs-UP-TvG"/>
                             <constraint firstItem="UgA-zD-gq3" firstAttribute="centerX" secondItem="iuM-ac-Kli" secondAttribute="centerX" id="lU8-Rf-1t5"/>
                             <constraint firstItem="AGr-dD-JHh" firstAttribute="centerX" secondItem="UHR-FO-jIh" secondAttribute="centerX" id="poa-3f-ze2"/>
+                            <constraint firstItem="gcC-QT-Tzv" firstAttribute="leading" secondItem="t3V-BZ-mda" secondAttribute="trailing" constant="24" id="r0U-AK-dGE"/>
+                            <constraint firstItem="ZXE-Ku-2wO" firstAttribute="top" secondItem="gcC-QT-Tzv" secondAttribute="bottom" constant="15" id="rWw-g3-Btq"/>
                             <constraint firstItem="4lt-sM-TI3" firstAttribute="leading" secondItem="Ek0-EG-5dG" secondAttribute="trailing" constant="24" id="twQ-GN-h6X"/>
                             <constraint firstItem="UHR-FO-jIh" firstAttribute="centerX" secondItem="hgx-aG-ltN" secondAttribute="centerX" id="udA-Vn-eKb"/>
                             <constraint firstItem="Xdh-6c-IoM" firstAttribute="centerY" secondItem="iuM-ac-Kli" secondAttribute="centerY" id="vbB-58-LVt"/>
+                            <constraint firstItem="ZXE-Ku-2wO" firstAttribute="centerY" secondItem="iuM-ac-Kli" secondAttribute="centerY" id="zD6-vK-Afl"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="colorPointsLabel" destination="ZXE-Ku-2wO" id="OG1-ec-ewe"/>
                         <outlet property="colorSwitch" destination="iuM-ac-Kli" id="d6y-D8-MOf"/>
                         <outlet property="nbackLabel" destination="hgx-aG-ltN" id="29H-ib-bg8"/>
                         <outlet property="nbackSlider" destination="UHR-FO-jIh" id="0UD-YP-aEh"/>
                         <outlet property="selectionTimeLabel" destination="AGr-dD-JHh" id="OkY-r7-gdN"/>
+                        <outlet property="soundPointsLabel" destination="xi9-8L-9CH" id="bmb-fQ-YPr"/>
                         <outlet property="soundSwitch" destination="UgA-zD-gq3" id="ePH-JG-Xuh"/>
+                        <outlet property="spacePointsLabel" destination="gcC-QT-Tzv" id="9wv-Js-oGl"/>
                         <outlet property="spaceSwitch" destination="t3V-BZ-mda" id="MBc-GV-zR8"/>
                         <outlet property="startButton" destination="Eb2-fb-5tE" id="VAV-QT-msP"/>
                         <outlet property="timeSlider" destination="56r-Rl-AvQ" id="LsQ-Y0-VrY"/>
+                        <outlet property="wrongAnswerPenaltyLabel" destination="Ltz-iH-bOE" id="BfA-WC-LCF"/>
+                        <outlet property="wrongAnswerPenaltySwitch" destination="GPi-vG-BG5" id="Z2X-ip-AxT"/>
                         <outletCollection property="switchLabels" destination="zsu-Ir-sqe" id="aZb-WB-eMJ"/>
                         <outletCollection property="switchLabels" destination="Xdh-6c-IoM" id="73x-Ew-FE1"/>
                         <outletCollection property="switchLabels" destination="gxJ-qy-9e3" id="jOU-ay-IL1"/>
